--- a/imdex.html
+++ b/imdex.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul>
+                <li><a href="">home</a></li>
+                <li><a href="">about</a></li>
+                <li><a href="">contact</a></li>
+                <li><a href="">login</a></li>
+            </ul>
+
+        </nav>
+        <div class="banner">
+            <div class="banner-conten"><h1 class="banner-title">brand new group of architects</h1>
+                <p class="banner-description">hy wtsup its me the king sohan i am the most handsome and cute boy in the woarld ok </p>
+                <button class="btn-primary">Explore more</button></div>
+            <img src="images/banner.png" alt="">
+        </div>
+
+    </header>
+    <main>
+        <section class="team-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+                <h3 class="teams-title"> <span class="love"> dont fair</span> <span class="of">the king</span> <span class="life">is hare</span></h3>
+                <div class="teams-content">                <p class="teams-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis accusantium voluptates numquam velit sapiente nostrum non ullam debitis libero necessitatibus, quidem placeat doloremque. Ut dignissimos id molestiae distinctio laboriosam et.</p>
+                <button class="btn-primary">Explore more</button>
+
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
