--- a/imdex.html
+++ b/imdex.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="banner">
             <div class="banner-conten"><h1 class="banner-title">brand new group of architects</h1>
-                <p class="banner-description">hy wtsup its me the king sohan i am the most handsome and cute boy in the woarld ok </p>
+                <p class="text-light-gray">hy wtsup its me the king sohan i am the most handsome and cute boy in the woarld ok </p>
                 <button class="btn-primary">Explore more</button></div>
             <img src="images/banner.png" alt="">
         </div>
@@ -36,9 +36,37 @@
 
             </div>
                 <h3 class="teams-title"> <span class="love"> dont fair</span> <span class="of">the king</span> <span class="life">is hare</span></h3>
-                <div class="teams-content">                <p class="teams-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis accusantium voluptates numquam velit sapiente nostrum non ullam debitis libero necessitatibus, quidem placeat doloremque. Ut dignissimos id molestiae distinctio laboriosam et.</p>
+                <div class="teams-content">                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis accusantium voluptates numquam velit sapiente nostrum non ullam debitis libero necessitatibus, quidem placeat doloremque. Ut dignissimos id molestiae distinctio laboriosam et.</p>
                 <button class="btn-primary">Explore more</button>
 
+            </div>
+        </section>
+        <section class="features"></section>
+        <section class="facts">
+            <h3 class="section-title">some facts</h3>
+            <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quidem doloremque eos sit beatae dolor explicabo, quis eveniet iusto laborum nemo repellat, repellendus cupiditate ipsum nesciunt odit unde quos inventore?</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gray">awards baler</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-light-gray ">projects finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gray ">clients worked</p>
+            
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gray ">email send</p>
+                </div>
             </div>
         </section>
 
